--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="fontawesome-free-5.15.2-web/css/all.min.css"> -->
     <script src="https://kit.fontawesome.com/eaf7e5d37c.js" crossorigin="anonymous"></script>
     <script defer src="scripts/script.js"></script>
-    <title>Document</title>
+    <title>Crucified Website</title>
 </head>
 <body>
     <div class="master">
